diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Addtional_Info__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Addtional_Info__c</fullName>
    <label>Form Submission:Addtional Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>