diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Contract_Type__c</fullName>
    <description>Populates from form submission.</description>
    <label>Form Submission: Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>District</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>