diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Message__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Message__c</fullName>
    <description>Populates from form submission.</description>
    <label>Form Submission: Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>