diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Number_of_Schools__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Number_of_Schools__c</fullName>
    <label>Form Submission: Number of Schools</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>