diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Role_Other_Details__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Role_Other_Details__c</fullName>
    <label>Form Submission: Role &quot;Other&quot; Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>