diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_School_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_School_Enrollment__c</fullName>
    <label>Form Submission: School Enrollment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>