diffIT/force-app/main/default/objects/Contact/fields/Form_Submission_Student_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Form_Submission_Student_Enrollment__c</fullName>
    <description>Populates from form submission.</description>
    <label>Form Submission: Student Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>