diffIT/force-app/main/default/objects/Contact/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>Outside of the U.S.</fullName>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
            <value>
                <fullName>USA</fullName>
                <isActive>false</isActive>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>