diffIT/force-app/main/default/objects/Contact/fields/School_Name__c.field-meta.xml
<CustomField>
    <fullName>School_Name__c</fullName>
    <description>Populated by form if the submitter is not able to find their school in the dropdown.</description>
    <inlineHelpText>Populated by form if the submitter is not able to find their school in the dropdown.</inlineHelpText>
    <label>School Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>